force-app/main/default/objects/VisMed_Objetivo_Accion_Profesional__c/VisMed_Objetivo_Accion_Profesional__c.object-meta.xml
<CustomObject>
    <description>Objeto que guarda la relacion entre el Objetivo y Accion de una Interaccion ( tarea de accion) por profesional.</description>
    <label>Objetivo y Accion del Profesional</label>
    <nameField>
        <displayFormat>OAP-{000000}</displayFormat>
        <label>Nombre de Objetivo y Accion del Profesio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Objetivos y Acciones del Profesional</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>