force-app/main/default/objects/VisMed_Objetivo_Accion_Profesional__c/fields/Accion__c.field-meta.xml
<CustomField>
    <fullName>Accion__c</fullName>
    <label>Acción</label>
    <referenceTo>VisMed_Accion__c</referenceTo>
    <relationshipLabel>Objetivos y Acciones del Profesional</relationshipLabel>
    <relationshipName>Acciones_del_Profesional</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>