force-app/main/default/objects/VisMed_Objetivo_Accion_Profesional__c/fields/APM__c.field-meta.xml
<CustomField>
    <fullName>APM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>APM</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Objetivos y Acciones del Profesional</relationshipLabel>
    <relationshipName>Objetivos_y_Acciones_del_Profesional</relationshipName>
    <type>Lookup</type>
</CustomField>