force-app/main/default/objects/VisMed_Objetivo_Accion_Profesional__c/fields/Interaccion__c.field-meta.xml
<CustomField>
    <fullName>Interaccion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interacción</label>
    <referenceTo>Dan360_Interacciones__c</referenceTo>
    <relationshipLabel>Objetivos y Acciones del Profesional</relationshipLabel>
    <relationshipName>Objetivos_y_Acciones_del_Profesional</relationshipName>
    <type>Lookup</type>
</CustomField>