force-app/main/default/objects/VisMed_Objetivo_Accion_Profesional__c/fields/Objetivo__c.field-meta.xml
<CustomField>
    <fullName>Objetivo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Objetivo</label>
    <referenceTo>VisMed_Objetivo__c</referenceTo>
    <relationshipLabel>Objetivos y Acciones del Profesional</relationshipLabel>
    <relationshipName>Objetivos_del_Profesional</relationshipName>
    <type>Lookup</type>
</CustomField>